syntax = "proto3";
package privacy.privacy;

option go_package = "privacy/x/privacy/types";

message OutputCoin {
  string index = 1; 
  bytes serial_number = 2;
  bool is_confidential_asset = 3;
  bytes pub_key = 4;
  bytes value = 5;
}

